--- a/HaRepacker/GUI/Panels/MainPanel.xaml
+++ b/HaRepacker/GUI/Panels/MainPanel.xaml
@@ -326,7 +326,7 @@
             <Grid x:Name="grid" Grid.Column="2" Background="#FFF1F1F1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
-                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -334,7 +334,7 @@
                 <sharedLib:ChangeableTextBox x:Name="nameBox" Grid.Row="0"
                                                   AcceptsReturn="False" Margin="20,0,20,0"
                                                       ButtonClicked="nameBox_ButtonClicked"/>
-                <sharedLib:ChangeableTextBox x:Name="textPropBox" Grid.Row="1"
+                <sharedLib:ChangeableTextBox x:Name="textPropBox" Grid.Row="1" Height="40"
                                                   TextWrap="Wrap" Margin="20,0,20,0" />
 
 
