[HaCreator] Fix NullReferenceException when attempting to close the last map editor tab
ref https://github.com/lastbattle/Harepacker-resurrected/issues/113

--- a/HaCreator/GUI/HaEditor.xaml
+++ b/HaCreator/GUI/HaEditor.xaml
@@ -48,7 +48,8 @@
         <!-- Side panel-->
         <ScrollViewer Grid.Row="1" Grid.Column="1"
                       HorizontalScrollBarVisibility="Disabled"
-                      VerticalScrollBarVisibility="Visible">
+                      VerticalScrollBarVisibility="Visible"
+                      x:Name="editorPanel">
             <StackPanel Orientation="Vertical">
                 
                 <Expander Header="Tile"
